# NeuroCar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: config.cmake
code/include/: cmd_options.hpp  dna.hpp  dna.inl  evolution.hpp  evolution.inl  evolving_string.hpp  mpi.hpp  neuro_controller.hpp  self_driving_car.hpp  self_driving_car_main.hpp  stats.hpp
code/src/: evolving_string.cpp  main.cpp  neuro_controller.cpp  self_driving_car.cpp  self_driving_car_main.cpp
report/: report.tex  stats.ods
report/csv/: bench.csv  stats.csv
